--- a/05-spa/package.json
+++ b/05-spa/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "sweetalert2": "^11.4.17",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
   },
